# isamples-ansible

./: .env.isamples_inabox.j2  .gitignore  README.md  cloud-init.yaml  configure_isamples_server.yml  configure_plausible.yml  create_release_tag.py  hosts  isamples-ina-box-nginx.j2  isamples_inabox.service  multipass-hosts.yml.template  plausible-conf.env  plausible-io.service  plausible-nginx.j2  publish_main_tag.py  pyproject.toml  site.yml  utils.py
group_vars/: all  aws  dev  isb  isc  virtual_machines  virtual_machines.template
roles/common/tasks/: main.yml
vars/: common_vars.yml
